[tool.poetry]
name = "fooddata"
version = "0.1.0"
description = "Download, build, and query the USDA food database"
authors = ["Marc Ford <mrfxyz567@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mfdeux/fooddata"
packages = [{ include = "fooddata" }]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.17.0"
black = "^19.10b0"

[tool.poetry.scripts]
fooddata = "fooddata.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
